--- a/L102/index.html
+++ b/L102/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Lab 1/2</title>
     <link rel="stylesheet" href="style.css">
+ <script src="java2.js"></script>
+ <script src="java3.js"></script>
   </head>
   <body>
     <!-- page content -->
